kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: carevoice-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - carevoice.antidote-ai.com
    secretName: carevoice-tls
  rules:
  - host: carevoice.antidote-ai.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server
            port: 
              number: 8002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port: 
              number: 80
